# luma

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md
Luma/: Makefile  Package.swift
Luma/Resources/: Info.plist  icon.icns
Luma/Sources/Luma/: LumaApp.swift
Luma/Sources/Luma/Engine/: AppleBrightness.swift  BrightnessController.swift  DDCService.swift  DDCWorker.swift  DisplayManager.swift  GammaDimmer.swift  NightShift.swift
Luma/Sources/Luma/Input/: Accessibility.swift  KeyTap.swift
Luma/Sources/Luma/State/: Profiles.swift  Settings.swift  Store.swift
Luma/Sources/Luma/Support/: Commands.swift  ConfigWatcher.swift  Diagnostics.swift  LaunchAtLogin.swift  Log.swift  SolarTimes.swift  Updater.swift  Version.swift
Luma/Sources/Luma/UI/: HUDController.swift  PopoverPanel.swift  PopoverView.swift  StatusItemController.swift  TrayIcon.swift  TrayMenu.swift
Luma/scripts/: check-nightshift.swift  dmg.sh
poc/tauri/: hud.html  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
poc/tauri/src/: hud.ts  main.ts  styles.css
poc/tauri/src-tauri/: Cargo.toml  tauri.conf.json
poc/tauri/src-tauri/capabilities/: default.json
poc/tauri/src-tauri/examples/: ddc_probe.rs
poc/tauri/src-tauri/icons/: icon.icns
poc/tauri/src-tauri/src/: commands.rs  display.rs  engine.rs  keys.rs  lib.rs  main.rs  tray.rs
