[package]
name = "luma"
version = "0.1.0"
description = "Menu bar brightness control for all displays"
license = "MIT"
edition = "2021"

[lib]
name = "luma_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
core-graphics = "0.25"
core-foundation = "0.10"
core-foundation-sys = "0.8"
# Pinned: Apple Silicon IOAVService support; the ddc traits must stay ^0.2 to match.
ddc = "0.2"
ddc-macos = "=0.2.2"
objc2-foundation = "0.3"
objc2-app-kit = { version = "0.3", features = ["NSScreen", "NSEvent", "NSWindow", "NSResponder", "NSPasteboard", "objc2-core-graphics"] }
objc2-core-foundation = "0.3"
objc2-core-graphics = { version = "0.3", features = ["CGEvent", "CGEventTypes"] }
